add filtering by repository
