# lib/proxi/server/swagger/swagger.yaml
@@ -106,6 +106,11 @@ paths:
         description: "Search the keywords list for exact matches"
         required: false
         type: "string"
+      - name: "repository"
+        in: "query"
+        description: "Select records based on the exact name of the repository"
+        required: false
+        type: "string"
       - name: "outputFormat"
         in: "query"
         description: "Output format desired. By default JSON, but TSV is also valid input"
